Correction to Contact details link name

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 </table>
 
-  <a href="Contact Details.html">Contact details</a>
+  <a href="Contact details.html">Contact details</a>
 </body>
 
 </html>
